--- a/16-react-typescript-scratch/my-app/package.json
+++ b/16-react-typescript-scratch/my-app/package.json
@@ -4,29 +4,24 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
-    "@testing-library/jest-dom": "*",
-    "@testing-library/react": "*",
-    "@testing-library/user-event": "*",
-    "@types/jest": "*",
-    "@types/node": "*",
-    "@types/react": "*",
-    "@types/react-dom": "*",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.14",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
-    "foundation-sites": "^6.7.5",
-    "localforage": "*",
-    "match-sorter": "*",
-    "react": "*",
-    "react-bootstrap": "^2.7.2",
-    "react-dom": "*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-iframe": "*",
-    "react-router-dom": "*",
-    "react-router-hash-link": "*",
-    "react-scripts": "*",
-    "sass": "*",
-    "sort-by": "*",
-    "typescript": "*",
-    "web-vitals": "*"
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.59.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.8.4"
   }
 }
